Adapt to layout changes again.
Test: ndk/checkbuild.py
Bug: https://github.com/android-ndk/ndk/issues/780
Change-Id: I514caab36879fdcd3fda8b3740f3cf8efce90710

--- a/test/lit.ndk.cfg.in
+++ b/test/lit.ndk.cfg.in
@@ -21,7 +21,8 @@ host_tag = lit_config.params["host_tag"]
 toolchain = lit_config.params["toolchain"]
 triple = lit_config.params["triple"]
 
-config.cxx_under_test = os.path.join(ndk, "toolchain/bin/clang++")
+config.cxx_under_test = os.path.join(
+    ndk, "toolchains/llvm/prebuilt", host_tag, "bin/clang++")
 config.std = "c++14"
 config.libcxx_src_root = libcxx_dir
 config.libcxx_obj_root = libcxx_dir
