--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -38,7 +38,8 @@ if obj_root is None:
         lit_config.warning('Creating temporary directory for object root: %s' %
                            obj_root)
 
-config.test_exec_root = os.path.join(obj_root, 'test')
+config.test_exec_root = getattr(config, 'test_exec_root',
+                                os.path.join(obj_root, 'test'))
 
 cfg_variant = getattr(config, 'configuration_variant', 'libcxx')
 if cfg_variant:
